###### 1.4.1
* Fixed a rare issue where some texts weren't displayed as localized texts.
* "RefreshLanguageResources" function added to manually refresh current language resources if needed.

###### 1.4.0
* "Manually Set Last Language" option added.
* Better error messages when importing CSV fails.
* Added option to disable plugin optimizations for easier debugging.
* Copyrights update.

###### 1.3.4
* Fixed an issue, which didn't allow to import csv file with empty lines at the end.

###### 1.3.3
* Added "BlueprintReadWrite" to the Key and Namespace of LocText.

###### 1.3.2
* "Are Text Keys Equal" function added.
* Removed "EngineVersion" from uplugin, as this plugin should work on any version.

###### 1.3.1
* Fixed crash when using GetTextData function on invalid text
* ValidateText will return false if the text is set to be non localizable
* Removed FixText function, as it was not working properly
* Added note about the endline format required to readme.

###### 1.3.0
* Stability improvements. Performing extra nullptr checks when accessing the tool.
* GetTextData function returns FText's source value too.
* ValidateText function has been added to the editor scripting utility in order to write scripts that can validate
  if the FText is properly localized.
* FixText function has been added to the editor scripting utility in order to write scripts that can fix incorrectly
  localized FTexts.

###### 1.2.0
* Major refactor. Functions are no longer static. To get ELT module use GetELT() macro, or UELT::Get(GetWorld()) function.
* FOnTextLocalizationChanged has been renamed to FOnTextLocalizationChangedStatic, as it can be used only via C++.
* FOnTextLocalizationChanged is a dynamic event now, which means it can be assigned via BP.

###### 1.1.4
* FOnTextLocalizationChanged event added, which runs every time the text localization changes.

###### 1.1.3
* FLocText will return a Key if no localization is found.

###### 1.1.2