@@ -205,9 +205,4 @@ public:
 	FOnLocalizationOnFirstRunChanged OnLocalizationOnFirstRunChangedDelegate;
 	FOnLocalizationOnFirstRunLangChanged OnLocalizationOnFirstRunLangChangedDelegate;
 	FOnGlobalNamespaceChanged OnGlobalNamespaceChangedDelegate;
-
-
-
-	UFUNCTION(BlueprintCallable)
-	void FixupLoc(FString DisplayString, FString Value, FString Namespace, FString Key);
 };
